<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitFormPageOneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStepOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/step_one_title"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txtUsernameInit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_username" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtPasswordInit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_password" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtEmailInit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp_location" />

        <EditText
            android:id="@+id/editTextTextPassword5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnNext1"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/nxt_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>